Add functionality to send academic warning emails and create warning email template